welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:42: error: illegal start of simple expression
	}
        ^